# zoom_meeting_scheduler

./: .env.example  .gitignore  LICENSE  pyproject.toml
lions_zoom_meeting_scheduler/: lions_zoom_meeting_scheduler.py  zoom.py
tests/: test_lions_zoom_meeting_scheduler.py
zoom_meeting_scheduler/: build_meeting_schedule.py  build_zoom_page.py  email.txt  models.py  page_postamble.html  page_preamble.html  zoom.py  zoom_meeting_scheduler.py  zoom_meetings.csv
zoom_meeting_scheduler/templates/: email.txt
