[tool.poetry]
name = "lions_zoom_meeting_scheduler"
version = "0.1.0"
description = "CLI app to schedule Zoom meetings with a shared Zoom account and provide details to email to the meeting requester"
authors = ["Kim van Wyk <kimv@sahomeloans.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.17.1"
authlib = "^0.15.4"
arrow = "^1.1.0"
requests = "^2.25.1"
pyperclip = "^1.8.2"
InquirerPy = "^0.2.0"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.6b0"
ptpython = "^3.0.17"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
