[project]
name = "lions_zoom_meeting_scheduler"
version = "0.1.0"
description = "CLI app to schedule Zoom meetings with a shared Zoom account and provide details to email to the meeting requester"
authors = ["Kim van Wyk <kimv@sahomeloans.com>"]
requires-python = ">=3.14"
dependencies = [
    "arrow>=1.4.0",
    "authlib>=1.6.6",
    "black>=26.1.0",
    "filetype>=1.2.0",
    "inquirerpy>=0.3.4",
    "jinja2>=3.1.6",
    "ptpython>=3.0.32",
    "pydantic>=2.12.5",
    "pyperclip>=1.11.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "sendgrid>=6.12.5",
]
